<resources>
    <string name="app_name">京东卡</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">重新登录</string>
    <string name="title">京东卡</string>
    <string name="count_title">数量</string>
    <string name="value_title">面值</string>
    <string name="ms">间隔(ms)</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="auto_switch">自动</string>
    <string name="title_setting">设置</string>
</resources>